[package]
name = "bitbucket-teams-notifications"
description = "Web service that accepts Atlassian BitBucket webhook requests and sends Microsoft Teams requests, mapping and forwarding the data."
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Sebastian Müller <gsenpo@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
